fixed too much margin on the right

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,10 @@
   box-sizing: inherit;
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
+  width: 100%;
+  box-sizing: border-box
 }
 
 a {
@@ -21,6 +23,9 @@ a:visited, a:link {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding: 0;
+  overflow: hidden; /* Prevent horizontal scroll */
+  max-width: 100vw;
 }
 
 .intro {
@@ -154,7 +159,6 @@ a:visited, a:link {
 .speech-bubble {
   display: flex;
   flex-direction: column;
-  margin-right: 10rem;
   background-color: #fff; 
   border-radius: 10px; 
   padding: 20px;
@@ -266,15 +270,18 @@ a:visited, a:link {
   background-color: #e0e0e0;
   color: black;
   text-align: center;
-  padding: 20px 0;
+  padding: 10px 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  white-space: nowrap;
+  flex-wrap: wrap;
+  gap: 10px;
   font-family: Andale Mono, monospace;
   font-size: 0.9rem;
   box-sizing: border-box;
-  min-width: 500px;
+  width: 100%;
+  max-width: 100vw;
+  white-space: normal;
 }
 
 .footer a {
@@ -287,7 +294,6 @@ a:visited, a:link {
     font-size: 80%;
     padding: 10px 0;
   }
-
 }
 
 /* commonly used */
